--- a/src/styles.css
+++ b/src/styles.css
@@ -2203,3 +2203,17 @@ input {
 .checkout-form{
     margin: 20px auto 20px auto !important;
 }
+
+.my-grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr); /* Default: 3 columns */
+  gap: 2rem; /* equivalent to gap-8 */
+  margin-bottom: 3rem; /* equivalent to mb-12 */
+}
+
+
+@media (max-width: 767px) {
+  .my-grid {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
