--- a/src/styles.css
+++ b/src/styles.css
@@ -2217,3 +2217,14 @@ input {
     grid-template-columns: repeat(1, 1fr);
   }
 }
+
+
+.marg-5{
+    margin-right: 5px;
+}
+
+.right-panel-style{
+    padding: 1.5rem;
+    border: 1px solid #ccc;
+    border-radius: .5rem;
+}
